--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,17 @@
+html{
+    width: fit-content;
+}
 body{
     background-color: lightblue;
+}
+.videoPlayingBox{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.603);
 }
 .clickableImage{
     padding: 0%;
